--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.4",
