--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.33.1"
   }
 }
